# DSA_Visualizer

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/algorithms/: graph.h  searching.h  sorting.h
backend/include/data_structures/: heap.h  tree.h
backend/src/: main.cpp  server.cpp  server.h
frontend/: package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: api.jsx
frontend/src/components/: Header.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/visualizers/: DataStructureVisualizer.jsx  GraphVisualizer.jsx  SearchingVisualizer.jsx  SortingVisualizer.jsx
